<!-- Lars Klee -->

<resources>
    <string name="app_name">Studienprojekt_Android</string>
    <string name="name">Name</string>
    <string name="device_name">Device Name</string>
    <string name="server_ip_address">Server IP-Address</string>
    <string name="point">.</string>
    <string name="_127">127</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="port">Port</string>
    <string name="_5000">5000</string>
    <string name="server_port">Server Port</string>
    <string name="connect">Connect</string>
    <string name="delete">Delete</string>
    <string name="end">End</string>
    <string name="quit">Quit</string>
    <string name="status">Status</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="cpu_usage">CPU Usage:</string>
    <string name="memory_usage">Memory Usage:</string>
    <string name="network_usage">Network Usage:</string>
    <string name="number_threads">Number of Threads:</string>
    <string name="device_name_str">Your device name:</string>
    <string name="no_calculation_running">no calculation running</string>
    <string name="calculation_started">calculation started</string>
    <string name="calculation_paused">calculation paused</string>
    <string name="calculation_resumed">calculation resumed</string>
    <string name="calculation_already_running">calculation is already running</string>
    <string name="calculation_already_resumed">calculation is already resumed</string>
    <string name="running">Running…</string>
    <string name="paused">Paused…</string>
    <string name="resume">Resume</string>
</resources>
