<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:id="@+id/txtCpuUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_usage"
            android:textAlignment="center"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:id="@+id/txtMemoryUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_usage"
            android:textAlignment="center"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:id="@+id/txtNetworkUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_usage"
            android:textAlignment="center"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/txtNetworkUsageSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/txtNetworkUsageRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/device_name"
            android:textAlignment="center"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1" >
        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B5A3A3"
            android:text="@string/start"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1"
            tools:ignore="NestedWeights">
            <Button
                android:id="@+id/btnPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#B5A3A3"
                android:text="@string/pause"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btnQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#B5A3A3"
                android:text="@string/quit"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAlignment="center"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>